FIX #12091 TIME 0:20 badge too small in basket list after custom field settings

--- a/src/frontend/app/administration/contact/customField/contacts-custom-fields-administration.component.scss
+++ b/src/frontend/app/administration/contact/customField/contacts-custom-fields-administration.component.scss
@@ -67,6 +67,6 @@
    padding-bottom: 10px;
 }
 
-::ng-deep.mat-badge-content {
+.mat-badge-content {
     top: 2px !important;
 }
